Fixed scrolling issue, streamlined css, fixed method to prevent backspacing in journal entry.

--- a/client/src/styles.css
+++ b/client/src/styles.css
@@ -1,6 +1,8 @@
 @import url('https://fonts.googleapis.com/css?family=Comfortaa');
 
 html {
+  background-image: linear-gradient(#90C4E8, #D7EDF0);
+  background-repeat: no-repeat;
   height: 100%;
   background-color: #D7EDF0;
 }
@@ -13,34 +15,16 @@ html {
 
 .home-header {
   background-image: url('../public/geode-header-thin.png');
-  /* background-size: cover; */
-  /* Set rules to fill background */
-  /* min-height: 100%; */
-  /* min-width: 1024px; */
-	
-  /* Set up proportionate scaling */
-  width: 100%;
-  /*height: auto;*/
-	
+
   /* Set up positioning -- this makes the image go all the way to the edges of the page */
   position: fixed;
   top: 0;
   left: 0;
 
   height: 100%;
-  background-position: center top;
+  width: 100%;
   background-repeat: no-repeat;
   background-size: contain;
-}
-
-.pages {
-  height: 100%;
-  background-image: linear-gradient(#90C4E8, #D7EDF0);
-  background-position: center top;
-  position: fixed;
-  top: 0;
-  left: 0;
-  background-color: #D7EDF0;
 }
 
 .centered {
@@ -118,6 +102,7 @@ textarea {
   border-radius: 16px;
   min-width: 350px;
   min-height: 50px;
+  overflow: visible;
 }
 
 @media screen and (min-width: 650px) {
